sync reducer stuff
bring tags into app repo

prevent prefset until prefsReady

prefs ready on sign up

prefsReady-desktop

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1348,6 +1348,9 @@
   "Create a channel": "Create a channel",
   "Credit Details": "Credit Details",
   "LBRY Credits": "LBRY Credits",
+  "Mark all as read": "Mark all as read",
+  "Log in to %SITE_NAME% to earn rewards From Inviting Your Friends": "Log in to %SITE_NAME% to earn rewards From Inviting Your Friends",
+  "Confirming...": "Confirming...",
   "Pinned by @%channel%": "Pinned by @%channel%",
   "Pinned by creator": "Pinned by creator",
   "Claim Your %reward_amount% Credit Invite Reward": "Claim Your %reward_amount% Credit Invite Reward",
