claim-search by language
setting to search only in language as default

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1446,6 +1446,41 @@
   "Level up with LBRY - %version%": "Level up with LBRY - %version%",
   "Invites": "Invites",
   "This comment was slimed to death.": "This comment was slimed to death.",
+  "Pin": "Pin",
+  "Unpin": "Unpin",
+  "LBRY leveled up": "LBRY leveled up",
+  "Dansk": "Dansk",
+  "中文 (简体)": "中文 (简体)",
+  "中文 (繁體)": "中文 (繁體)",
+  "Hrvatski": "Hrvatski",
+  "Nederlands": "Nederlands",
+  "Français": "Français",
+  "Deutsch": "Deutsch",
+  "ગુજરાતી": "ગુજરાતી",
+  "हिन्दी": "हिन्दी",
+  "Bahasa Indonesia": "Bahasa Indonesia",
+  "Basa Jawa": "Basa Jawa",
+  "Italiano": "Italiano",
+  "Bahasa Melayu": "Bahasa Melayu",
+  "മലയാളം": "മലയാളം",
+  "मराठी": "मराठी",
+  "ਪੰਜਾਬੀ / पंजाबी / پنجابي": "ਪੰਜਾਬੀ / पंजाबी / پنجابي",
+  "Polski": "Polski",
+  "Português": "Português",
+  "Română": "Română",
+  "Русский": "Русский",
+  "Српски": "Српски",
+  "Slovenčina": "Slovenčina",
+  "اردو": "اردو",
+  "Català": "Català",
+  "Español": "Español",
+  "Svenska": "Svenska",
+  "Türkçe": "Türkçe",
+  "Česky": "Česky",
+  "ಕನ್ನಡ": "ಕನ್ನಡ",
+  "Українська": "Українська",
+  "Search only in this language by default": "Search only in this language by default",
+  "ml": "ml",
   "Reddit": "Reddit",
   "Chat (Discord)": "Chat (Discord)",
   "Telegram": "Telegram",
